--- a/component/carousel.html
+++ b/component/carousel.html
@@ -1,4 +1,4 @@
-<div class="carousel-home smoke-effect">
+<div class="carousel-home">
   <div id="carouselExampleIndicators" class="carousel carousel-dark slide" data-bs-ride="true">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -7,13 +7,19 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active" style="background-image: url(https://www.estacionbpsantabrigida.com/uploads/aznbULhD/1059692-DSCF9018-2-c20ad.w1900.jpg);">
+        <div class="carouselBackground" style="background-image: url(https://www.estacionbpsantabrigida.com/uploads/aznbULhD/1059692-DSCF9018-2-c20ad.w1900.jpg);">
 
+        </div>
       </div>
       <div class="carousel-item" style="background-image: url(https://www.estacionbpsantabrigida.com/uploads/T9EKt807/IMG_20200306_105718.jpg);">
+        <div class="carouselBackground" style="background-image: url(https://www.estacionbpsantabrigida.com/uploads/T9EKt807/IMG_20200306_105718.jpg);">
 
+        </div>
       </div>
       <div class="carousel-item" style="background-image: url(https://www.estacionbpsantabrigida.com/uploads/P0LQwFg0/IMG_20200309_105433.jpg);">
+        <div class="carouselBackground" style="background-image: url(https://www.estacionbpsantabrigida.com/uploads/P0LQwFg0/IMG_20200309_105433.jpg);">
 
+        </div>
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
