Versión 52. Carrito Funcional OnePage

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,45 @@
 /* RESPONSIVE CSS ========================================================================= */
 /*Tablets en horizonal y escritorios normales------------------------------------------------------------------------- */
 @media screen and (min-width: 1280px)  {
+  /*Carrito*/
+  .dark {
+    display: none;
+    background-color: black;
+    opacity: 0.8;
+    width: 100%;
+    height: 1200px;
+  }
+  .card-body-cart{
+    display: flex !important;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .add-quite-buttons{
+    display: flex;
+    flex-direction: column;
+  }
+  .img-product-cart{
+    min-height: 120px;
+    background-size: contain;
+    background-repeat: no-repeat;
+  }
+  .modal-dialog{
+    max-width: unset !important;
+    width: 100% !important;
+    display: flex !important;
+    justify-content: center !important;
+  }
+  .carrito{
+    width: 600px !important;
+  }
+  #modal-carrito .card {
+    height: 120px !important;
+    width: 100% !important;
+  }
+  #modal-carrito {
+    overflow-y: scroll;
+    max-height: 500px;
+  }
   /*Check Box Servicios*/
   .form-check-input[type=checkbox] {
     border-radius: .25em;
@@ -2586,6 +2625,4 @@
     width:4.5rem;
   }
 }
-
-
 
