--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,18 @@
 /*Tablets en horizonal y escritorios normales------------------------------------------------------------------------- */
 @media screen and (min-width: 1280px)  {
   /*Carrito*/
+  .total {
+    width: 50%;
+    display: flex;
+    flex-direction: row;
+    align-content: flex-end;
+    align-items: center;
+    flex-wrap: nowrap;
+  }
+  .total > div {
+    display: flex;
+  }
+
   .dark {
     display: none;
     background-color: black;
@@ -871,7 +883,7 @@
 }
 
 /*Tablets*/
-@media screen and (min-width: 768px) and (max-width: 1280px) {
+@media screen and (min-width: 768px) and (max-width: 1279px) {
   /*Check Box Servicios*/
   .form-check-input[type=checkbox] {
     border-radius: .25em;
