--- a/component/headerLog.html
+++ b/component/headerLog.html
@@ -58,7 +58,7 @@
       <div id="modal-carrito" class="modal-body">
         <h1>CARRITO</h1>
       </div>
-      <div class="modal-footer">
+      <div class="modal-footer modal-footer-cart">
         <div class="total">
           <div>
             <h3>Total: <h3 id="mount-cart">0,00</h3>€</h3>
