--- a/css/main.css
+++ b/css/main.css
@@ -184,6 +184,9 @@
     align-content: center;
     width: 50%;
   }
+
+
+
   hr {
     width: 100%;
     color: white;
@@ -1177,7 +1180,6 @@
 
   .user-image {
     margin: 30px;
-    align-content: center;
     width: 50%;
   }
 
@@ -1224,6 +1226,14 @@
   }
 
   #btnEliminarCuenta:hover {
+    background-color: red !important;
+  }
+
+  #btnCerrarSesion {
+    background-color: darkred !important;
+  }
+
+  #btnCerrarSesion:hover {
     background-color: red !important;
   }
 
@@ -2142,13 +2152,17 @@
     margin: 30px;
     align-content: center;
     width: 50%;
+    align-self: center;
   }
   hr {
     width: 100%;
     color: white;
   }
+
+
+
   .user-data {
-    width: 50%;
+    width: 100%;
     margin: 40px;
   }
   .name {
@@ -2176,16 +2190,41 @@
     text-align: center;
     background-color: darkred;
     border-radius: 6px;
-    margin: 50px;
+    justify-content: center;
+    display: flex;
+    width: 40%;
+    margin-bottom: 20px;
+    margin-left: 30px;
   }
+  #btnEliminarCuenta {
+    background-color: darkred !important;
+  }
+
+  #btnEliminarCuenta:hover {
+    background-color: red !important;
+  }
+
+  #btnCerrarSesion {
+    background-color: darkred !important;
+  }
+
+  #btnCerrarSesion:hover {
+    background-color: red !important;
+  }
+
   .eliminate:hover {
     background-color: red;
   }
+
+  #Profile {
+    justify-content: flex-start;
+  }
+
   .profile {
     text-align: justify;
     width: 100%;
     display: flex;
-    flex-direction: row;
+    flex-direction: column-reverse;
   }
   .profile a {
     text-decoration: none;
