Versión 2. Componentes creados

--- a/src/app/app-home/app-home.component.html
+++ b/src/app/app-home/app-home.component.html
@@ -72,7 +72,9 @@
                     <a class="btn" href="https://mibp.es/es/welcome/como-funciona">¡Accede a Mi BP!</a>
                 </div>
             </div>
-            <div class="image-bp_card"></div>
+            <div class="image-bp_card">
+                <img class="image-bp_card" src="../assets/img/bp_card.png">
+            </div>
         </div>
 
         <div class="semicircles-container">
@@ -133,6 +135,6 @@
 
     </main>
 
-    <app-footer></app-footer>
-    
+    <app-footer id="footer"></app-footer>
+
 </body>
