--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
 <div class="footer-col1" >
-    <img class="footer-logo" src="/PWM-TEMPLATES/img/LOGO.png">
+    <img class="footer-logo" src="../../assets/img/LOGO.png">
 </div>
 
 <div class="footer-col2">
