--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,13 +10,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="\PWM-TEMPLATES\index.html">Inicio</a>
+          <a class="nav-link active" aria-current="page" >Inicio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link " href="/PWM-TEMPLATES/pages/whatWeDo.html">¿Qué hacemos?</a>
+          <a class="nav-link " routerLink="quehacemos">¿Qué hacemos?</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link " href="/PWM-TEMPLATES/pages/store.html">Tienda</a>
+          <a class="nav-link " routerLink="tienda">Tienda</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle text-primary text-white" href="#" id="navbarDropdown" role="button"
@@ -24,12 +24,12 @@
             Taller
           </a>
           <ul class="dropdown-menu bg-dark" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="/PWM-TEMPLATES/pages/workshopStore.html">Productos</a></li>
-            <li><a class="dropdown-item" href="/PWM-TEMPLATES/pages/workshopService.html">Servicios</a></li>
+            <li><a class="dropdown-item" routerLink="tienda-taller">Productos</a></li>
+            <li><a class="dropdown-item" routerLink="servicios-taller">Servicios</a></li>
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-primary text-white" href="/PWM-TEMPLATES/pages/signIn.html">MiArea</a>
+          <a class="nav-link text-primary text-white" routerLink="iniciar-sesion">MiArea</a>
         </li>
       </ul>
     </div>
