--- a/src/styles.css
+++ b/src/styles.css
@@ -508,7 +508,7 @@
     .dropdown-item:hover  {
       background-color: rgba(42,45,49,1) !important;
     }
-    footer div a:hover {
+    app-footer div a:hover {
       color:  #36b920;
     }
   
@@ -772,7 +772,7 @@
       color:white !important;
     }
     /*CSS FOOTER*/
-    footer {
+    app-footer {
       border-top: 1px solid #000 !important;
       position: absolute;
       left: 0;
@@ -789,7 +789,7 @@
     .footer-col1 {
       width: 30%;
     }
-    footer div p, footer div a  {
+    app-footer div p, app-footer div a  {
       font-family: Arial, Helvetica, sans-serif;
       text-decoration: none;
       color: white;
@@ -1561,7 +1561,7 @@
       background-color: rgba(42,45,49,1) !important;
     }
   
-    footer div a:hover {
+    app-footer div a:hover {
       color:  #36b920;
     }
   
@@ -1751,7 +1751,7 @@
   
     /*CSS FOOTER*/
   
-    footer {
+    app-footer {
       border-top: 1px solid #000 !important;
       position: absolute;
       left: 0;
@@ -1767,7 +1767,7 @@
     }
     .footer-col1 {
     }
-    footer div p, footer div a  {
+    app-footer div p, app-footer div a  {
       font-family: Arial, Helvetica, sans-serif;
       text-decoration: none;
       color: white;
@@ -2543,7 +2543,7 @@
     .dropdown-item:hover  {
       background-color: rgba(42,45,49,1) !important;
     }
-    footer div a:hover {
+    app-footer div a:hover {
       color:  #36b920;
     }
   
@@ -2704,7 +2704,7 @@
       color:white !important;
     }
     /*CSS FOOTER*/
-    footer {
+    app-footer {
       border-top: 1px solid #000 !important;
       position: absolute;
       left: 0;
@@ -2720,7 +2720,7 @@
     }
     .footer-col1 {
     }
-    footer div p, footer div a  {
+    app-footer div p, app-footer div a  {
       font-family: Arial, Helvetica, sans-serif;
       text-decoration: none;
       color: white;
