--- a/src/app/app-workshop-store/app-workshop-store.component.html
+++ b/src/app/app-workshop-store/app-workshop-store.component.html
@@ -45,7 +45,7 @@
             d="M8 4.466V.534a.25.25 0 0 1 .41-.192l2.36 1.966c.12.1.12.284 0 .384L8.41 4.658A.25.25 0 0 1 8 4.466z" />
         </svg>
       </div>
-      <footer class="footer-store" id="footer"></footer>
+      <app-footer class="footer-store" id="footer"></app-footer>
     </section>
   </main>
 
