Versión 4. Añadiendo servicios de firestore

--- a/src/app/app-sign-in/app-sign-in.component.html
+++ b/src/app/app-sign-in/app-sign-in.component.html
@@ -13,7 +13,7 @@
       <a href="#"> ¿Has olvidado la contraseña? </a>
     </form>
     <div class="register-login-box shadow-lg">
-      <p>¿No tienes una cuenta? <a href="\PWM-TEMPLATES\pages\signUp.html">Regístrate</a> </p>
+      <p>¿No tienes una cuenta? <a routerLink="/registrarse">Regístrate</a> </p>
     </div>
   </div>
 </body>
