Versión 5. Arreglado Autenticacion y  Añadido Servicio/Carga de productos

--- a/src/app/app-dashboard-user/app-dashboard-user.component.html
+++ b/src/app/app-dashboard-user/app-dashboard-user.component.html
@@ -1,5 +1,8 @@
 <body>
-  <app-header class="header-dashboard shadow-sm" id="header"></app-header>
+  <header class="header-dashboard shadow-sm" id="header">
+    <app-header *ngIf="!userService.isLoggedIn" class="shadow-lg" id="header"></app-header>
+    <app-header-log *ngIf="userService.isLoggedIn" class="shadow-lg" ></app-header-log>
+  </header>
   <main class="main-tienda">
 
     <aside class="aside-dashboard shadow-lg p-3 mb-5 rounded">
@@ -106,7 +109,7 @@
         <a ref="" id="btnEliminarCuenta" class="btn">Eliminar cuenta</a>
       </div>
       <div class="eliminate">
-        <a onclick="logout()" id="btnCerrarSesion" class="btn">Cerrar sesión</a>
+        <a (click)="userService.SignOut()" id="btnCerrarSesion" class="btn">Cerrar sesión</a>
       </div>
       <footer class="footer-store" id="footer"></footer>
     </section>
