--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,8 +1,8 @@
 <div class="card product shadow-lg" id="product-template">
-    <div class="img-product"></div>
+    <div class="img-product" style="background-image: url({{img}});"></div>
     <div class="card-body">
-      <p class="card-text">Producto 1</p>
-      <h5 class="card-title">00,00€</h5>
+      <p class="card-text">{{shortName}}</p>
+      <h5 class="card-title">{{pvp}}</h5>
       <div  class="btn-color ">
         <a ref="" class="btn">Añadir</a>
       </div>
