--- a/src/app/app-sign-in/app-sign-in.component.html
+++ b/src/app/app-sign-in/app-sign-in.component.html
@@ -1,17 +1,18 @@
 <body>
   <div class="register-login-form">
-    <form class="shadow-lg" onsubmit="loggin()">
+    <article class="shadow-lg">
       <img class="imgUser" src="/PWM-TEMPLATES/img/LOGO.png">
       <h2>Inicia Sesion</h2>
-      <input id="email" required pattern="^[^@]+@[^@]+\.[a-zA-Z]{2,}$" class="shadow-lg" type="email"
+      <input id="email" required pattern="^[^@]+@[^@]+\.[a-zA-Z]{2,}$" class="shadow-lg" type="email" #email
         placeholder="Correo electrónico">
-      <input id="contrasena" required minlength="6" maxlength="9" class="shadow-lg" type="password"
+      <input id="contrasena" required minlength="6" maxlength="9" class="shadow-lg" type="password" #password
         placeholder="Contraseña">
-      <button type="submit" value="Submit" class="button">Iniciar Sesion</button>
+        <button  class="button" (click)="userService.SignIn(email.value, password.value)">Registrate</button>
+      <button (click)="userService.SignIn(email.value, password.value)" class="button">Iniciar Sesion</button>
       <br>
       <br>
       <a href="#"> ¿Has olvidado la contraseña? </a>
-    </form>
+    </article>
     <div class="register-login-box shadow-lg">
       <p>¿No tienes una cuenta? <a routerLink="/registrarse">Regístrate</a> </p>
     </div>
