--- a/src/app/app-workshop-store/app-workshop-store.component.html
+++ b/src/app/app-workshop-store/app-workshop-store.component.html
@@ -1,5 +1,9 @@
 <body>
-  <app-header class="shadow-lg" id="header"></app-header>
+  <header class="shadow-lg" id="header">
+    <app-header *ngIf="!userService.isLoggedIn" class="shadow-lg" id="header"></app-header>
+    <app-header-log *ngIf="userService.isLoggedIn" class="shadow-lg" ></app-header-log>
+  </header>
+
 
   <main class="main-tienda">
 
