--- a/src/styles.css
+++ b/src/styles.css
@@ -533,6 +533,14 @@
       border: 1px solid #dbdbdb;
       border-radius: 5px;
     }
+    .register-login-form article {
+      width: 450px;
+      text-align: center;
+      background-color: #d9ffd9;
+      padding: 50px;
+      border: 1px solid #dbdbdb;
+      border-radius: 5px;
+    }
     .register-login-box {
       margin-top: 20px;
       width: 450px;
@@ -734,7 +742,7 @@
   
   
     /*CSS  HEADER*/
-    app-header{
+    app-header, app-header-log{
       width: 100%;
       position: fixed; /*absolute para que se mueva solo el ul*/
       left: 0;
@@ -1586,6 +1594,14 @@
       border: 1px solid #dbdbdb;
       border-radius: 5px;
     }
+    .register-login-form article{
+      width: 450px;
+      text-align: center;
+      background-color: #d9ffd9;
+      padding: 50px;
+      border: 1px solid #dbdbdb;
+      border-radius: 5px;
+    }
     .register-login-box {
       margin-top: 20px;
       width: 450px;
@@ -1708,7 +1724,7 @@
     }
   
     /*CSS  HEADER*/
-    app-header{
+    app-header, app-header-log{
       width: 100%;
       position: fixed; /*absolute para que se mueva solo el ul*/
       left: 0;
@@ -2569,6 +2585,14 @@
       border: 1px solid #dbdbdb;
       border-radius: 5px;
     }
+    .register-login-form article {
+      width: 332px;
+      text-align: center;
+      background-color: #d9ffd9;
+      padding: 50px;
+      border: 1px solid #dbdbdb;
+      border-radius: 5px;
+    }
     .register-login-box {
       margin-top: 20px;
       width: 332px;
@@ -2666,7 +2690,7 @@
       background-repeat: no-repeat;
     }
     /*CSS  HEADER*/
-    app-header {
+    app-header, app-header-log{
       width: 100%;
       position: fixed; /*absolute para que se mueva solo el ul*/
       left: 0;
