--- a/src/app/app-store/app-store.component.html
+++ b/src/app/app-store/app-store.component.html
@@ -8,6 +8,7 @@
 
         <aside id="aside" class="shadow-lg  mb-5 rounded">
             <button onclick="showCategoryMov(0)" type="button" class="btn btn-success">Volver..</button>
+            <app-aside *ngFor="let category of categories"    [category]="category.category" [subcategories]="category.subcategory"></app-aside>
         </aside>
 
         <section class="products">
