Versión 8. Actualizado la pagina de tienda ahora cargar elementos de firestore de forma paginada con el metodo lazy, aún no completa

--- a/src/app/aside/aside.component.html
+++ b/src/app/aside/aside.component.html
@@ -1,7 +1,7 @@
 <div class="category">
     <a class="nameC">{{category}}</a>
     <div class="category-content">
-        <a *ngFor="let sub of subcategories" style="color:white" id="{{sub.Subcategoria}}">
+        <a *ngFor="let sub of subcategories" style="color:white" id="{{sub.Subcategoria}}" #id (click)="handleClick(id.id)">
             {{sub.Subcategoria}}
         </a>
     </div>
