--- a/src/app/app-store/app-store.component.html
+++ b/src/app/app-store/app-store.component.html
@@ -8,7 +8,7 @@
 
         <aside id="aside" class="shadow-lg  mb-5 rounded">
             <button onclick="showCategoryMov(0)" type="button" class="btn btn-success">Volver..</button>
-            <app-aside *ngFor="let category of categories"    [category]="category.category" [subcategories]="category.subcategory"></app-aside>
+            <app-aside *ngFor="let category of categories" [category]="category.category" [subcategories]="category.subcategory" (cambioLista)="updateCategory($event)"></app-aside>
         </aside>
 
         <section class="products">
@@ -20,7 +20,7 @@
                 </div>
                 <div class="filters">
                     <form class="d-flex ">
-                        <a onclick="buscar()" class="btn btn-success me-1">
+                        <a  (click)="queryFunc('ProductosTienda','NombreCorto',query.value)" class="btn btn-success me-1">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                 class="bi bi-search" viewBox="0 0 16 16">
                                 <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0
@@ -28,22 +28,22 @@
                             </svg>
                         </a>
                         <input autocomplete="off" id="query" class="form-control" type="search" placeholder="Buscar.."
-                            aria-label="Search">
+                            aria-label="Search" #query>
                     </form>
-                    <select class="form-select" aria-label="Default select example" onchange="ordenar(value,0)">
-                        <option selected>Ordenar por: defecto</option>
-                        <option value="1">Ordenar por: Nombre (A-Z)</option>
-                        <option value="2">Ordenar por: Nombre (Z-A)</option>
-                        <option value="3">Ordenar por: Precio (Menor a Mayor)</option>
-                        <option value="4">Ordenar por: Precio (Mayor a Menor)</option>
+                    <select class="form-select" aria-label="Default select example"  (change)="selectLoad($event)">
+                        <option value="0" selected>Ordenar por: defecto</option>
+                        <option value="NombreCorto.asc">Ordenar por: Nombre (A-Z)</option>
+                        <option value="NombreCorto.desc">Ordenar por: Nombre (Z-A)</option>
+                        <option value="PVP.asc">Ordenar por: Precio (Menor a Mayor)</option>
+                        <option value="PVP.desc">Ordenar por: Precio (Mayor a Menor)</option>
                     </select>
                 </div>
                 <div id="contenedor-productos" class="product-aline">
                     <!--Contenido Generado por main.js-->
-                    <app-product *ngFor="let elemento of  products" [img]="elemento.img" [shortName]="elemento.shortName" [pvp]="elemento.pvp"></app-product>
+                    <app-product *ngFor="let elemento of  productList" [img]="elemento.IMAGEN" [shortName]="elemento.NombreCorto" [pvp]="elemento.PVP"></app-product>
                 </div>
             </div>
-            <div id="reload" onclick="loadProducts('Catalogo Tienda')">
+            <div id="reload" (click)="reload()">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                     class="bi bi-arrow-clockwise" viewBox="0 0 16 16">
                     <path fill-rule="evenodd" d="M8 3a5 5 0 1 0 4.546 2.914.5.5 0 0 1 .908-.417A6 6 0 1 1 8 2v1z" />
