Versión 9. Completadas  paginas de tienda/taller ahora puede cargar elementos de firestore de forma paginada con el metodo lazy

--- a/src/app/app-store/app-store.component.html
+++ b/src/app/app-store/app-store.component.html
@@ -31,7 +31,7 @@
                             aria-label="Search" #query>
                     </form>
                     <select class="form-select" aria-label="Default select example"  (change)="selectLoad($event)">
-                        <option value="0" selected>Ordenar por: defecto</option>
+                        <option value="CodBarras.asc" selected>Ordenar por: defecto</option>
                         <option value="NombreCorto.asc">Ordenar por: Nombre (A-Z)</option>
                         <option value="NombreCorto.desc">Ordenar por: Nombre (Z-A)</option>
                         <option value="PVP.asc">Ordenar por: Precio (Menor a Mayor)</option>
