--- a/src/app/app-sign-in/app-sign-in.component.html
+++ b/src/app/app-sign-in/app-sign-in.component.html
@@ -1,20 +1,20 @@
 <body>
   <div class="register-login-form">
-    <article class="shadow-lg">
-      <img class="imgUser" src="/PWM-TEMPLATES/img/LOGO.png">
+    <form [formGroup]="checkoutForm" (ngSubmit)="onSubmit()" class="shadow-lg">
+      <img class="imgUser" src="../../assets/img/LOGO.png">
       <h2>Inicia Sesion</h2>
-      <input id="email" required pattern="^[^@]+@[^@]+\.[a-zA-Z]{2,}$" class="shadow-lg" type="email" #email
-        placeholder="Correo electrónico">
-      <input id="contrasena" required minlength="6" maxlength="9" class="shadow-lg" type="password" #password
-        placeholder="Contraseña">
-        <button  class="button" (click)="userService.SignIn(email.value, password.value)">Registrate</button>
-      <button (click)="userService.SignIn(email.value, password.value)" class="button">Iniciar Sesion</button>
+      <input id="email" required pattern="^[^@]+@[^@]+\.[a-zA-Z]{2,}$" class="shadow-lg" type="email"
+      formControlName="email" placeholder="Correo electrónico">
+      <input id="contrasena" required minlength="6" maxlength="9" class="shadow-lg" type="password" 
+      formControlName="password" placeholder="Contraseña">
+      <button class="button"  type="submit">Iniciar Sesion</button>
       <br>
       <br>
       <a href="#"> ¿Has olvidado la contraseña? </a>
-    </article>
+  </form>
     <div class="register-login-box shadow-lg">
       <p>¿No tienes una cuenta? <a routerLink="/registrarse">Regístrate</a> </p>
+      <a routerLink="/">Volver</a>
     </div>
   </div>
 </body>
