--- a/src/app/cart-product/cart-product.component.html
+++ b/src/app/cart-product/cart-product.component.html
@@ -1,19 +1,18 @@
 <div class="card mb-3 card-carrito" style="max-width: 540px;">
     <div class="row g-0">
         <div class="col-md-4">
-            <div class="img-product-cart">
+            <div class="img-product-cart" [style.background-image]="'url(' + IMAGEN + ')'">
             </div>
         </div>
         <div class="col-md-8">
             <div class="card-body  card-body-cart">
                 <div>
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                        additional content. This content is a little bit longer.</p>
+                    <h5 class="card-title">{{NombreCorto}}</h5>
+                    <p class="card-text">{{PVP}}</p>
                 </div>
                 <div class="add-quite-buttons">
-                    <button type="button" class="btn btn-success add-buttons">+</button>
-                    <button type="button" class="btn btn-danger quite-buttons">-</button>
+                    <button type="button" class="btn btn-success add-buttons" (click)="logAdd()">+</button>
+                    <button type="button" class="btn btn-danger quite-buttons" (click)="logDelete()">-</button>
                 </div>
             </div>
         </div>
