--- a/src/styles.css
+++ b/src/styles.css
@@ -23,7 +23,7 @@
       background-color: black;
       opacity: 0.8;
       width: 100%;
-      height: 1200px;
+      height: 100vh;
     }
     .card-body-cart{
       display: flex !important;
@@ -924,7 +924,7 @@
       background-color: black;
       opacity: 0.8;
       width: 100%;
-      height: 1200px;
+      height: 100vh;
     }
     .card-body-cart{
       display: flex !important;
@@ -1937,7 +1937,7 @@
       background-color: black;
       opacity: 0.8;
       width: 100%;
-      height: 1200px;
+      height: 100vh;
     }
     .card-body-cart{
       display: flex !important;
