--- a/src/app/app-home/app-home.component.html
+++ b/src/app/app-home/app-home.component.html
@@ -12,9 +12,7 @@
         <div class="presentation">
             <div class="description">
                 <h1>Presentación</h1>
-                <p class="p-justify">
-                    <!--Se carga la presentación de la empresa desde el json-->
-                </p>
+                <p class="p-justify" [innerHTML]="textoPresentacion?.Texto"></p>
             </div>
             <img src="https://www.estacionbpsantabrigida.com/uploads/BzH8nN2Q/IMG_20201206_234737.jpg" alt="">
         </div>
