Versión 15. Funcionalidad reserva terminada

--- a/src/app/header-log/header-log.component.html
+++ b/src/app/header-log/header-log.component.html
@@ -78,6 +78,20 @@
                 [posCode]="elemento.posCode"
                 ></app-cart-product>
             </div>
+            <form style="display: flex;justify-content: space-around;">
+                <mat-form-field appearance="fill">
+                    <mat-label>Choose a date</mat-label>
+                        <input #fecha (click)="picker.open()" (focus)="picker.open()" matInput [matDatepicker]="picker">
+                        <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+                        <mat-datepicker #picker></mat-datepicker>
+                </mat-form-field>
+                <mat-form-field appearance="fill">
+                    <mat-label>Hora:</mat-label>
+                    <input #hora type="email" matInput  placeholder="hh:mm" required>
+                </mat-form-field>
+              </form>
+              
+
             <div class="modal-footer modal-footer-cart">
                 <div class="total">
                     <div>
@@ -95,7 +109,7 @@
                             d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1H.5zm3.915 10L3.102 4h10.796l-1.313 7h-8.17zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0z" />
                     </svg>
                 </button>
-                <button type="submit" class="btn btn-success " (click)="reservar()">Reservar</button>
+                <button type="submit" class="btn btn-success " (click)="reservar(fecha.value, hora.value)">Reservar</button>
             </div>
         </div>
     </div>
